src/test/ui/feature-gate/allow-features.stderr
error[E0725]: the feature `rustc_const_unstable` is not in the list of allowed features
  --> $DIR/allow-features.rs:6:12
   |
LL | #![feature(rustc_const_unstable)]
   |            ^^^^^^^^^^^^^^^^^^^^

error[E0725]: the feature `unknown_stdlib_feature` is not in the list of allowed features
  --> $DIR/allow-features.rs:10:12
   |
LL | #![feature(unknown_stdlib_feature)]
   |            ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0725`.
